main - stricter types
