# docs/openapi.json
@@ -56,7 +56,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PaginatedResponseDto"
+                  "$ref": "#/components/schemas/PaginatedUserResponseDto"
                 }
               }
             }
@@ -208,7 +208,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/"
+                  "$ref": "#/components/schemas/PaginatedHobbyResponseDto"
                 }
               }
             }
@@ -384,7 +384,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/"
+                  "$ref": "#/components/schemas/PaginatedTransactionResponseDto"
                 }
               }
             }
@@ -470,7 +470,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/"
+                  "$ref": "#/components/schemas/PaginatedTaxYearResponseDto"
                 }
               }
             }
@@ -544,7 +544,7 @@
   },
   "info": {
     "title": "spndr-api",
-    "description": "",
+    "description": "API for Spndr, a platform for managing and tracking financial flows of multiple income streams.",
     "version": "0.0.1",
     "contact": {}
   },
@@ -571,7 +571,7 @@
           "version"
         ]
       },
-      "PaginatedResponseDto": {
+      "PaginatedUserResponseDto": {
         "type": "object",
         "properties": {
           "data": {
@@ -753,6 +753,36 @@
           }
         }
       },
+      "PaginatedHobbyResponseDto": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "meta": {
+            "type": "object",
+            "properties": {
+              "total": {
+                "type": "number"
+              },
+              "offset": {
+                "type": "number"
+              }
+            },
+            "required": [
+              "total",
+              "offset"
+            ]
+          }
+        },
+        "required": [
+          "data",
+          "meta"
+        ]
+      },
       "HobbyDto": {
         "type": "object",
         "properties": {
@@ -823,6 +853,36 @@
             "$ref": "#/components/schemas/PeaksDto"
           }
         }
+      },
+      "PaginatedTransactionResponseDto": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "meta": {
+            "type": "object",
+            "properties": {
+              "total": {
+                "type": "number"
+              },
+              "offset": {
+                "type": "number"
+              }
+            },
+            "required": [
+              "total",
+              "offset"
+            ]
+          }
+        },
+        "required": [
+          "data",
+          "meta"
+        ]
       },
       "TransactionDto": {
         "type": "object",
@@ -896,6 +956,36 @@
           "taxYearId",
           "createdAt",
           "updatedAt"
+        ]
+      },
+      "PaginatedTaxYearResponseDto": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          },
+          "meta": {
+            "type": "object",
+            "properties": {
+              "total": {
+                "type": "number"
+              },
+              "offset": {
+                "type": "number"
+              }
+            },
+            "required": [
+              "total",
+              "offset"
+            ]
+          }
+        },
+        "required": [
+          "data",
+          "meta"
         ]
       },
       "TaxYearDto": {
