# src/dtos/transaction.dto.ts
@@ -1,6 +1,7 @@
 import { ApiProperty } from '@nestjs/swagger';
 import { Decimal } from '@prisma/client/runtime/library';
 import { TransactionType } from '../types/transaction.type';
+import { PaginatedResponseDto } from './pagination.dto';
 
 export class TransactionDto {
   @ApiProperty({ example: 'cln1234567890' })
@@ -42,3 +43,5 @@ export class TransactionDto {
   @ApiProperty()
   updatedAt: Date;
 }
+
+export class PaginatedTransactionResponseDto extends PaginatedResponseDto<TransactionDto> {}
